--- a/research-summaries/maladies-resume-researche.html
+++ b/research-summaries/maladies-resume-researche.html
@@ -113,7 +113,7 @@ d’harmoniser le projet avec cet objectif.</p>
 
 <p>Nous avons également appris que la plupart des gens utilisaient des appareils mobiles pour consulter le contenu. Ils consultaient leurs téléphones intelligents pour vérifier s’ils avaient attrapé un rhume ou une grippe, les cas où ils devaient se faire vacciner ou les vaccins dont ils avaient besoin pour voyager dans un pays précis.</p>
 
-<p>À partir de ces renseignements, l’équipe a créé un ensemble d’ébauches de scénarios pratiques qui représentent ce que les gens font dans la vie réelle. Ils suivent une structure telle la suivante : <strong>Quand je</strong> … (la situation), <strong>je veux</strong> …  (la motivation), <strong>pour que je</strong> … (le résultat désiré). Par exemple :</p>
+<p>À partir de ces renseignements, l’équipe a créé un ensemble d’ébauches de scénarios pratiques qui représentent ce que les gens font dans la vie réelle. Ils suivent une structure comme celle-ci : <strong>Quand je</strong> … (la situation), <strong>je veux</strong> …  (la motivation), <strong>pour que je</strong> … (le résultat désiré). Par exemple :</p>
 
 <ul>
   <li><strong>Quand</strong>  la saison de la grippe arrive, <strong>je veux</strong> savoir où je peux me faire vacciner contre la grippe, <strong>afin de</strong> le faire</li>
@@ -154,7 +154,7 @@ Description détaillée
 
 <h2 id="establishing-a-baseline">Établissement d’une référence</h2>
 
-<p>Avant de changer quoi que ce soit, nous avons effectué des essais de convivialité dirigés. Nous voulions évaluer les résultats du contenu existant de Canada.ca auprès du public. Les participants étaient 16 parents employés d’enfants de moins de 18 ans. Ils ont assisté à des séances de recherche à Toronto et à Ottawa avec leurs téléphones intelligents. On leur a demandé d’effectuer les 11 scénarios à l’aide du site Web Canada.ca. S’il leur restait du temps, ils répétaient l’une des tâches sur Ontario.ca à des fins de comparaison.</p>
+<p>Avant de changer quoi que ce soit, nous avons effectué des essais de convivialité dirigés. Nous voulions évaluer les résultats du contenu existant de Canada.ca auprès du public. Les participants étaient 16 parents d’enfants de moins de 18 ans. Ils ont assisté à des séances de recherche à Toronto et à Ottawa avec leurs téléphones intelligents. On leur a demandé d’effectuer les 11 scénarios à l’aide du site Web Canada.ca. S’il leur restait du temps, ils répétaient l’une des tâches sur Ontario.ca à des fins de comparaison.</p>
 
 <p>Les scénarios étaient présentés au hasard, à l’exception du premier et du dernier. Certaines tâches commençaient directement sur la page d’accueil de Canada.ca, tandis que d’autres débutaient sur les pages traitant de vaccination, du Zika ou de la grippe. Les scénarios étaient présentés sur une tablette sur le bureau du participant. Les participants pouvaient se référer à la tablette pendant qu’ils effectuaient la tâche, puis entrer leur réponse et continuer le questionnaire.</p>
 
@@ -199,7 +199,7 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 
 <h2 id="measuring-success-rates-on-the-redesigned-prototype">Mesure des taux de réussite du prototype restructuré</h2>
 
-<p>Une fois que le nouvel aspect était prêt, nous avons appelé 16 nouveaux participants pour accomplir les mêmes 11 tâches. Le résultat visé était un taux de réussite de 80 %, ou une amélioration d’au moins 20 points par rapport aux résultats de la base de référence. La restructuration du contenu et de l’aspect a amélioré le taux de réussite de la recherche de 66 % à 90 %. Quant au taux de réussite des tâches, il est monté de 53 % à 84 %.</p>
+<p>Une fois la nouvelle conception prête, nous avons appelé 16 nouveaux participants pour accomplir les mêmes 11 tâches. Le résultat visé était un taux de réussite de 80 %, ou une amélioration d’au moins 20 points par rapport aux résultats de la base de référence. La restructuration du contenu et de l’aspect a amélioré le taux de réussite de la recherche de 66 % à 90 %. Quant au taux de réussite des tâches, il est monté de 53 % à 84 %.</p>
 
 <p>Le graphique suivant illustre le taux de réussite des tâches des scénarios aux essais de validation de la base de référence et du prototype restructuré pour les 32 participants :</p>
 
@@ -212,7 +212,7 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 
 			 <details>
 			 <summary>
-			 Datable description
+			 Tableau de données
 			 </summary>
 			 <p>
 				 <div class="table-bravo">
