--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -336,7 +336,7 @@
 
 																<br>
 
-	<!--	<p><a href="https://canada-ca.github.io/research-summaries/maladies-resume-researche.html"><span class="wb-inv">Renseignements sur les maladies et la vaccination : </span> Apprenez la façon dont nous l’avons fait.</a></p> -->
+<p><a href="https://canada-ca.github.io/research-summaries/maladies-resume-researche.html"><span class="wb-inv">Renseignements sur les maladies et la vaccination : </span> Apprenez la façon dont nous l’avons fait.</a></p>
 
 																</div>
 																</section>
@@ -506,7 +506,7 @@
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "le 25 avril 2018",
+		dateModified: "le 10 mai 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
