--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -342,7 +342,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 																<br>
 
-	<!--	<p><a href="https://canada-ca.github.io/research-summaries/diseases-research-summary.html"><span class="wb-inv">Diseases and immunization: </span>Learn how we did it.</a></p> -->
+	<p><a href="https://canada-ca.github.io/research-summaries/diseases-research-summary.html"><span class="wb-inv">Diseases and immunization: </span>Learn how we did it.</a></p> 
 
 																</div>
 																</section>
@@ -513,7 +513,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "April 25, 2018",
+		dateModified: "May 10, 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
