--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -37,7 +37,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "fr",
-					href: "maladies-resume-researche.html",
+					href: "meteo-resume-researche.html",
 					text: "Français"
 				}],
 				breadcrumbs: [{
@@ -204,14 +204,14 @@ Below that is a table showing local weather with all four columns visible. An ar
 
 <div itemprop="text" class="" data="type-text">
       <div class="img-responsive center-block">
-          <span class=""><img src="../images/weather-meteo/Baseline_vs_Validation_Success_results.JPG" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
+          <span class=""><img src="../images/weather-meteo/Baseline_vs_Validation_Success_results.jpg" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
        </span>
 
        </div>
 
 			 <details>
 			 <summary>
-			 Datable description
+			  Task completion success rates – table
 			 </summary>
 			 <p>
 				 <div class="table-bravo">
@@ -268,11 +268,11 @@ Below that is a table showing local weather with all four columns visible. An ar
 
 <h2>Request the research </h2>
 
-<p>Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a>.</p>
+<p>Email us at <a href="mailto:information@tbs-sct.gc.ca">information@tbs-sct.gc.ca</a> if you have questions, or would like to know more about this research.</p>
 
 <h2> What do you think? </h2>
 
-<p>Let us know what you think about this project.  Tweet using the hashtag #Canadadotca.</p>
+<p>Let us know what you think about this project. Tweet using the hashtag #Canadadotca.</p>
 
 <h2> Explore further </h2>
 
