--- a/pages/wfe-sondage-fr.html
+++ b/pages/wfe-sondage-fr.html
@@ -50,7 +50,7 @@
 <!-- <p>Nous voulons savoir ce qui vous sera le plus utile dans votre travail de production de contenu numérique pour le gouvernement du Canada. Répondez à ce sondage rapide pour nous en informer.</p> -->
 
 <section>
-<script type="text/javascript" >document.write('<script src="http' + ( ("https:" == document.location.protocol) ? "s" : "") + '://ca.surveygizmo.com/s3/50023060/b909a0e8232a?__output=embedjs&__ref=' + escape(document.location.origin + document.location.pathname) + '" type="text/javascript" ></scr' + 'ipt>');</script><noscript>SurveyGizmo - <a href="https://www.surveygizmo.com/team-enterprise/">Enterprise survey software</a> for teams. <a href="https://ca.surveygizmo.com/s3/50023060/b909a0e8232a??jsfallback=true">Please take my survey now</a></noscript><style>.sg-survey{display:none; }</style>
+<script type="text/javascript" >document.write('<script src="http' + ( ("https:" == document.location.protocol) ? "s" : "") + '://ca.surveygizmo.com/s3/50030733/0a5a5a72f5ca?__output=embedjs&__ref=' + escape(document.location.origin + document.location.pathname) + '" type="text/javascript" ></scr' + 'ipt>');</script><noscript><a href="https://try.surveygizmo.com/assessment">SurveyGizmo</a> - employee assessments aid in professional development and employee satisfaction. <a href="https://ca.surveygizmo.com/s3/50030733/0a5a5a72f5ca??jsfallback=true">Please take my survey now</a></noscript><style>.sg-survey{display:none; }</style>
 </section>
 
 <div id="def-preFooter">
