Updated with title

--- a/pages/wfe-sondage-fr.html
+++ b/pages/wfe-sondage-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Sondage</title>
+		<title>Sondage de rétroaction sur Canada.ca - vers l'avenir</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -45,7 +45,7 @@
 }
 </style>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 property="name" id="wb-cont" class="h2">Sondage</h1>
+<h1 property="name" id="wb-cont" class="h2">Sondage de rétroaction sur Canada.ca - vers l'avenir</h1>
 <section>
 <!-- <p>Nous voulons savoir ce qui vous sera le plus utile dans votre travail de production de contenu numérique pour le gouvernement du Canada. Répondez à ce sondage rapide pour nous en informer.</p> -->
 
