--- a/pages/wfe-survey-en.html
+++ b/pages/wfe-survey-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Way Forward event survey - Canada.ca </title>
+		<title>Way Forward feedback survey - Canada.ca </title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -48,7 +48,7 @@
 
 <main role="main" property="mainContentOfPage" class="container">
 
-<h1 property="name" id="wb-cont" class="h2">Survey</h1>
+<h1 property="name" id="wb-cont" class="h2">Canada.ca – Way Forward feedback survey</h1>
 <!-- <p>We want to know what will be most helpful to you in your work producing digital content for the Government of Canada. Answer this quick survey to let us know.</p> -->
 
 <section>
