--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -44,7 +44,9 @@
 					title: "Home",
 					href: "https://www.canada.ca/en.html"
 				},{
-					title: "About Canada.ca",
+					title: "...",
+				},{
+					title: "Canada.ca content improvement projects",
 					href: "https://www.canada.ca/en/government/about.html"
 				}],
 				search: true,
