--- a/research-summaries/maladies-resume-researche.html
+++ b/research-summaries/maladies-resume-researche.html
@@ -41,12 +41,15 @@
 					text: "English"
 				}],
 				breadcrumbs: [{
-					title: "Accueil",
-					href: "https://www.canada.ca/fr.html"
-				},{
-					title: "Au sujet de Canada.ca",
-					href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
-				}],
+							title: "Accueil",
+							href: "https://www.canada.ca/fr.html"
+						},{
+							title: "...",
+						},
+						{
+							title: "Projets d'améliorer le contenu sur Canada.ca",
+							href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
+						}],
 				search: true,
 				siteMenu: true,
 				showPreContent: false
