--- a/research-summaries/diseases-research-summary.html
+++ b/research-summaries/diseases-research-summary.html
@@ -47,7 +47,7 @@
 					title: "...",
 				},{
 					title: "Canada.ca content improvement projects",
-					href: "https://www.canada.ca/en/government/about.html"
+					href: "https://canada-ca.github.io/pages/projectoverview.html"
 				}],
 				search: true,
 				siteMenu: true,
