--- a/research-summaries/maladies-resume-researche.html
+++ b/research-summaries/maladies-resume-researche.html
@@ -48,7 +48,7 @@
 						},
 						{
 							title: "Projets d'améliorer le contenu sur Canada.ca",
-							href: "https://www.canada.ca/fr/gouvernement/a-propos.html"
+							href: "https://canada-ca.github.io/pages/apercu-projet.html"
 						}],
 				search: true,
 				siteMenu: true,
