--- a/pages/event-privacy.html
+++ b/pages/event-privacy.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Authorization and Release</title>
+		<title>Privacy notice - events</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
