--- a/pages/privacy-top-task-webinar.html
+++ b/pages/privacy-top-task-webinar.html
@@ -46,6 +46,6 @@
   
   <p>Any questions, comments, concerns or complaints you may have regarding this Statement, your privacy rights and the Privacy Act may be directed to the TBS Access to Information and Privacy Coordinator by email at <a href="mailto:ATIP.AIPRP@TBS-SCT.gc.ca">ATIP.AIPRP@tbs-sct.gc.ca</a> or by telephone at 1-866-312-1511. You may also wish to contact the Office of the Privacy Commissioner of Canada by email at <a href="mailto:info@priv.gc.ca">info@priv.gc.ca</a> or by telephone at 1-800-282-1376. You have the right to complain to the Office of the Privacy Commissioner of Canada about the handling of your personal information by TBS.</p>
   
-<p><a href="http://ca.surveygizmo.com/#">Return to registration page</a></p>
+<p><a href="https://ca.surveygizmo.com/s3/50031524/Canada-ca-Top-Task-ID-Webinar-Canada-ca-Webinaire-sur-l-identification-des-t-ches-principales">Return to registration page</a></p>
 </body>
 </html>
