--- a/pages/confidentialite-taches-principales-webinaire.html
+++ b/pages/confidentialite-taches-principales-webinaire.html
@@ -45,6 +45,6 @@
 
 <p>Pour transmettre vos questions, commentaires ou préoccupations concernant le présent avis, vos droits en matière de protection des renseignements personnels ou la Loi sur la protection des renseignements personnels, communiquez avec le coordonnateur de l’accès à l’information et de la protection des renseignements personnels du SCT, à <a href="mailto:atip.aiprp@tbs-sct.gc.ca">atip.aiprp@tbs-sct.gc.ca</a>, ou en composant le 1-866-312-1511. Vous pouvez aussi communiquer avec le Commissariat à la protection de la vie privée du Canada par courriel, à <a href="mailto:info@priv.gc.ca">info@priv.gc.ca</a>, ou par téléphone, au 1-800-282-1376. Vous avez également la possibilité de déposer une plainte auprès du Commissariat à la protection de la vie privée du Canada quant à la façon dont le SCT traite vos renseignements personnels.</p>
   
-<p><a href="https://ca.surveygizmo.com/#">Retour à la page d'inscription</a></p>
+<p><a href="https://ca.surveygizmo.com/s3/50031524/CanadacaWebinairetachesprincipales">Retour à la page d'inscription</a></p>
 </body>
 </html>
