noted where I am more clearly

--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -181,7 +181,7 @@ Detailed description
 
 <p>Tout au long du processus de conception, nous avons mis à l’essai le contenu auprès des utilisateurs au moyen de petites séances « guérilla » informelles. Ces essais ont révélé des problèmes de conception que nous avons pu régler avant la mise à l’essai modérée de la convivialité à grande échelle.</p>
 
-<!-- here -->
+<!-- I AM HERE
 <p><img class="img-responsive" alt="Une image de téléphones intelligents qui montrent la page sur le Zika avant et après la restructuration. Une description détaillée suit." src="../images/diseases-maladies-immun/zika_telephones.png" /></p>
 <figure>
 <figcaption><small>Page sur les pays de destination qui présentent un risque d’infection par le virus Zika : version de base et nouvelle version aux fins de validation</small></figcaption>
@@ -315,7 +315,7 @@ Il y a ensuite un court paragraphe de texte trop petit pour le lire, puis un cha
 
   </div>
 
-</article>
+</article> -->
 </div>
 
 <div id="def-preFooter">
