--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -44,8 +44,10 @@
 					title: "Home",
 					href: "https://www.canada.ca/en.html"
 				},{
-					title: "About Canada.ca",
-					href: "https://www.canada.ca/en/government/about.html"
+					title: "...",
+				},{
+					title: "Canada.ca content improvement projects",
+					href: "https://canada-ca.github.io/pages/projectoverview.html"
 				}],
 				search: true,
 				siteMenu: true,
