--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -280,6 +280,7 @@ Below that is a table showing local weather with all four columns visible. An ar
 
 <ul>
 
+<li><a href="https://weather.gc.ca/canada_e.html">See the updated weather pages</a> based on the new designs in this project</li>
 <li><a href="https://canada-ca.github.io/pages/projectoverview.html">Read overviews of other projects</a> with our partners</li>
 
 </ul>
