--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Résumé de projet : Maladies et vaccination</title>
+		<title>Résumé de projet : Renseignements météorologiques</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -244,27 +244,27 @@ l’annotation : « La longue piste de navigation diminuait la visibilité des d
 				<th scope="col">Base</th>
 				<th scope="col">Validation</th>
 
-			</tr></thead><tbody><tr><td>1. Navigate to local forecast</td>
-				<td  >87%</td>
-				<td>100%</td>
-			</tr><tr><td>2. LOP understand & find precip. likelihood</td>
-				<td  >19%</td>
-				<td>94%</td>
-			</tr><tr><td>3. Snow statement: Driving</td>
-				<td>25%</td>
-				<td>75%</td>
-			</tr><tr><td>4. Alert: Open thunderstorm watch for hail</td>
-				<td  >6%</td>
-				<td>63%</td>
-			</tr><tr><td>5. Radar: Decision based on current precip.</td>
-				<td  >0%</td>
-				<td>31%</td>
-			</tr><tr><td>6. Humidex: Cancel soccer game</td>
-				<td  >88%</td>
-				<td>81%</td>
-			</tr><tr><td>7. Lightning map: Clear golf course </td>
-				<td  >6%</td>
-				<td>63%</td>
+			</tr></thead><tbody><tr><td>1. Naviguer jusqu’aux prévisions météorologiques locales</td>
+				<td  >87 %</td>
+				<td>100 %</td>
+			</tr><tr><td>2. EdP : comprendre et trouver la probabilité de précipitation</td>
+				<td  >19 %</td>
+				<td>94 %</td>
+			</tr><tr><td>3. Avis d’averses de neige : Conduite</td>
+				<td>25 %</td>
+				<td>75 %</td>
+			</tr><tr><td>4. Avertissement : Veille d’orages et de grêle</td>
+				<td  >6 %</td>
+				<td>63 %</td>
+			</tr><tr><td>5. Radar : Décision basée sur les précipitations actuelles</td>
+				<td  >0 %</td>
+				<td>31 %</td>
+			</tr><tr><td>6. Humidex : Annuler le match de soccer</td>
+				<td  >88 %</td>
+				<td>81 %</td>
+			</tr><tr><td>7. Carte du risque de foudre : Évacuer le terrain de golf </td>
+				<td  >6 %</td>
+				<td>63 %</td>
 
 			</tbody></table>
 			 </p>
