--- a/pages/soumettre-domaines-institutionnels.html
+++ b/pages/soumettre-domaines-institutionnels.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Soumettre domaines institutionnels - Canada.ca</title>
+		<title>Soumettez vos noms de domaine institutionnels - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -45,7 +45,7 @@
 }
 </style>
 <main role="main" property="mainContentOfPage" class="container">
-<h1 property="name" id="wb-cont" class="h2">Soumettre domaines institutionnels</h1>
+<h1 property="name" id="wb-cont" class="h2">Soumettez vos noms de domaine institutionnels</h1>
 <section>
 <!-- <p>Nous voulons savoir ce qui vous sera le plus utile dans votre travail de production de contenu numérique pour le gouvernement du Canada. Répondez à ce sondage rapide pour <nou></nou>s en informer.</p> -->
 
