--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -247,22 +247,22 @@ l’annotation : « La longue piste de navigation diminuait la visibilité des d
 			</tr></thead><tbody><tr><td>1. Naviguer jusqu’aux prévisions météorologiques locales</td>
 				<td  >87 %</td>
 				<td>100 %</td>
-			</tr><tr><td>2. EdP : comprendre et trouver la probabilité de précipitation</td>
+			</tr><tr><td>2. Comprendre et trouver la probabilité de précipitation</td>
 				<td  >19 %</td>
 				<td>94 %</td>
-			</tr><tr><td>3. Avis d’averses de neige : Conduite</td>
+			</tr><tr><td>3. Avis d’averses de neige : conduite</td>
 				<td>25 %</td>
 				<td>75 %</td>
-			</tr><tr><td>4. Avertissement : Veille d’orages et de grêle</td>
+			</tr><tr><td>4. Avertissement : veille d’orages et de grêle</td>
 				<td  >6 %</td>
 				<td>63 %</td>
-			</tr><tr><td>5. Radar : Décision basée sur les précipitations actuelles</td>
+			</tr><tr><td>5. Radar : décision basée sur les précipitations actuelles</td>
 				<td  >0 %</td>
 				<td>31 %</td>
-			</tr><tr><td>6. Humidex : Annuler le match de soccer</td>
+			</tr><tr><td>6. Humidex : annuler le match de soccer</td>
 				<td  >88 %</td>
 				<td>81 %</td>
-			</tr><tr><td>7. Carte du risque de foudre : Évacuer le terrain de golf </td>
+			</tr><tr><td>7. Carte du risque de foudre : évacuer le terrain de golf </td>
 				<td  >6 %</td>
 				<td>63 %</td>
 
