--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -226,7 +226,7 @@ Below that is a table showing local weather with all four columns visible. An ar
 			</tr></thead><tbody><tr><td>1. Navigate to local forecast</td>
 				<td  >87%</td>
 				<td>100%</td>
-			</tr><tr><td>2. LOP understand & find precip. likelihood</td>
+			</tr><tr><td>2. Understand & find precipitation likelihood</td>
 				<td  >19%</td>
 				<td>94%</td>
 			</tr><tr><td>3. Snow statement: Driving</td>
@@ -235,7 +235,7 @@ Below that is a table showing local weather with all four columns visible. An ar
 			</tr><tr><td>4. Alert: Open thunderstorm watch for hail</td>
 				<td  >6%</td>
 				<td>63%</td>
-			</tr><tr><td>5. Radar: Decision based on current precip.</td>
+			</tr><tr><td>5. Radar: Decision based on current precipitation</td>
 				<td  >0%</td>
 				<td>31%</td>
 			</tr><tr><td>6. Humidex: Cancel soccer game</td>
