add animations to summary

--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -177,26 +177,49 @@ Detailed description
 
 <p>Throughout the design process, we tested content with people through small, informal "guerilla" sessions. These tests revealed problems with our designs that we were able to address before full-scale moderated usability testing.</p>
 
-<p><img class="img-responsive" alt="Smartphones showing the 24h forecast page for Ottawa before and after redesign. Detailed description follows." src="../images/weather-meteo/weather_phones.png" /></p>
+<p><img class="img-responsive" alt="Smartphones showing the alert design before and after. Detailed description follows." src="../images/weather-meteo/weather_phones_anim-alert.gif" /></p>
 <figure>
-<figcaption><small>24h forecast page at baseline and after mobile redesign for validation</small></figcaption>
+<figcaption><small>Alert design before and after mobile redesign for validation</small></figcaption>
 <br>
 <details>
 <summary>
 Detailed description
 </summary>
+<br>
 <p>
-Two smartphones are shown with 2 different web pages. One is labelled "Baseline", the other "Redesign". In the "Baseline" page, the title is "24 Hour Forecast – Ottawa (Kanata-Orléans)” followed by a weather alert box in yellow and part of a table listing date, time, temperature and weather conditions. The table cuts off the fourth column. An arrow points to breadcrumb with an annotation "Long breadcrumbs made important weather details less visible”.</p>
+Two smartphones are shown with 2 different versions of a web page. One is labelled "Before", the other "After".</p>
+
+<p> In the "Baseline" page, the title is "Ottawa (Kanata-Orléans) ON” followed by a weather alert box in yellow with the text "Severe thunderstorm wtach in effect". An arrow points to alert box with the annotation "Before: Few people realized the warning was clickable to see details about the storm”.</p>
 <p>
-In the "Redesign" page, the title is "Hourly forecast – Ottawa (Kanata-Orléans)". An arrow points to the highlighted link within the yellow alert box with the annotation "Changing alert style helped Canadians find weather alert details".</p>
-<p>
-Below that is a table showing local weather with all four columns visible. An arrow points to the chart with an annotation "Responsive chart helped mobile users see weather data”.
-</p>
+In the "After" page, the weather alert box in yellow has been changed: there is now a small warning icon, the text is now underlined to show it can be clicked, and there is a chevron on the right. This image is animated, and the phone screen slowly scrolls up and down to show the alert is duplicated above the forecast which is lower on the page. An arrow points to alert text "After: Everyone noticed and clicked the warning - either at the top or in the forecast".</p>
+
+
+
 
 </details>
 
 </figure>
 
+<p><img class="img-responsive" alt="Smartphones showing the weather city page before and after. Detailed description follows." src="../images/weather-meteo/weather_phones_anim.gif" /></p>
+<figure>
+<figcaption><small>City page design before and after mobile redesign for validation</small></figcaption>
+<br>
+<details>
+<summary>
+Detailed description
+</summary>
+<br>
+<p>
+Two smartphones are shown with 2 different versions of a web page. One is labelled "Before", the other "After".</p>
+
+<p>The "Before" page is animated and scrolls to the bottom, past the Current Conditions, Forecast, Averages and Extremes, etc. The page is very long and the commonly used links, are found at the end. An arrow points list of links with the annotation "Before: Huge page to scroll. Participants didn't find important task links all the way at the bottom of the page".</p>
+
+<p>
+The "After" page is also animated, and scrolls to just underneathe the Current Conditions. This part of the page has been changed so that the content is in two columns, and the button links are now easy to find. An arrow points list of links with the annotation "After: Content has been streamlined. Short page. All participants found top links next to forecast".
+</p>
+</details>
+
+</figure>
 
 <h2 id="measuring-success-rates-on-the-redesigned-prototype">Measuring success rates on the redesigned prototype</h2>
 
