--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -189,7 +189,7 @@ Detailed description
 <p>
 Two smartphones are shown with 2 different versions of a web page. One is labelled "Before", the other "After".</p>
 
-<p> In the "Baseline" page, the title is "Ottawa (Kanata-Orléans) ON” followed by a weather alert box in yellow with the text "Severe thunderstorm wtach in effect". An arrow points to alert box with the annotation "Before: Few people realized the warning was clickable to see details about the storm”.</p>
+<p> In the "Baseline" page, the title is "Ottawa (Kanata-Orléans) ON” followed by a weather alert box in yellow with the text "Severe thunderstorm watch in effect". An arrow points to alert box with the annotation "Before: Few people realized the warning was clickable to see details about the storm”.</p>
 <p>
 In the "After" page, the weather alert box in yellow has been changed: there is now a small warning icon, the text is now underlined to show it can be clicked, and there is a chevron on the right. This image is animated, and the phone screen slowly scrolls up and down to show the alert is duplicated above the forecast which is lower on the page. An arrow points to alert text "After: Everyone noticed and clicked the warning - either at the top or in the forecast".</p>
 
@@ -215,7 +215,7 @@ Two smartphones are shown with 2 different versions of a web page. One is labell
 <p>The "Before" page is animated and scrolls to the bottom, past the Current Conditions, Forecast, Averages and Extremes, etc. The page is very long and the commonly used links, are found at the end. An arrow points list of links with the annotation "Before: Huge page to scroll. Participants didn't find important task links all the way at the bottom of the page".</p>
 
 <p>
-The "After" page is also animated, and scrolls to just underneathe the Current Conditions. This part of the page has been changed so that the content is in two columns, and the button links are now easy to find. An arrow points list of links with the annotation "After: Content has been streamlined. Short page. All participants found top links next to forecast".
+The "After" page is also animated, and scrolls to just underneath the Current Conditions. This part of the page has been changed so that the content is in two columns, and the button links are now easy to find. An arrow points list of links with the annotation "After: Content has been streamlined. Short page. All participants found top links next to forecast".
 </p>
 </details>
 
