converted to videos

--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -177,13 +177,25 @@ Detailed description
 
 <p>Throughout the design process, we tested content with people through small, informal "guerilla" sessions. These tests revealed problems with our designs that we were able to address before full-scale moderated usability testing.</p>
 
-<p><img class="img-responsive" alt="Smartphones showing the alert design before and after. Detailed description follows." src="../images/weather-meteo/weather_phones_anim-alert.gif" /></p>
-<figure>
-<figcaption><small>Alert design before and after mobile redesign for validation</small></figcaption>
-<br>
+
+
+<h3>Alert design before and after mobile redesign for validation</h3>
+<div class="mwsmediaplayer section">
+
+
+    <figure class="wb-mltmd"><video poster="#" title="Alert design before and after mobile redesign for validation">
+ <source src="../images/weather-meteo/weather_phones_anim-alert.mp4" type="video/mp4" />
+
+</video></figure>
+
+
+
+</div>
+
+
 <details>
 <summary>
-Detailed description
+Video description
 </summary>
 <br>
 <p>
@@ -199,14 +211,22 @@ In the "After" page, the weather alert box in yellow has been changed: there is 
 </details>
 
 </figure>
+<h3>City page design before and after mobile redesign for validation</h3>
+<div class="mwsmediaplayer section">
 
-<p><img class="img-responsive" alt="Smartphones showing the weather city page before and after. Detailed description follows." src="../images/weather-meteo/weather_phones_anim.gif" /></p>
-<figure>
-<figcaption><small>City page design before and after mobile redesign for validation</small></figcaption>
-<br>
+
+    <figure class="wb-mltmd"><video poster="#" title="City page design before and after mobile redesign for validation">
+ <source src="../images/weather-meteo/weather_phones_anim.mp4" type="video/mp4" />
+
+</video></figure>
+
+
+
+</div>
+
 <details>
 <summary>
-Detailed description
+Video description
 </summary>
 <br>
 <p>
