--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -185,38 +185,68 @@ Description détaillée
 <p>Tout au long du processus de conception, nous avons mis à l’essai le contenu auprès des utilisateurs au moyen de petites séances « guérilla » informelles. Ces essais ont révélé des problèmes de conception que nous avons pu régler avant la mise à l’essai modérée de la convivialité à grande échelle.</p>
 
 
-<p><img class="img-responsive" alt="Des téléphones intelligents affichant la page de prévision sur 24 h pour
-Ottawa avant et après le remaniement. La description détaillée suit." src="../images/weather-meteo/meteo_telephones.png" /></p>
-<figure>
-<figcaption><small>La page de prévision sur 24 h avant et après le remaniement.</small></figcaption>
+<h3>Alert design before and after mobile redesign for validation</h3>
+<div class="mwsmediaplayer section">
 
-<br>
+
+    <figure class="wb-mltmd"><video poster="../images/weather-meteo/weather_phones_anim-alert-FR.jpg" title="Alert design before and after mobile redesign for validation">
+ <source src="../images/weather-meteo/weather_phones_anim-alert-FR.mp4" type="video/mp4" />
+
+</video></figure>
+
+
+
+</div>
+
 
 <details>
 <summary>
-Description détaillée
+Description de vidéo
 </summary>
+<br>
 <p>
-	Deux téléphones intelligents affichent deux pages Web différentes. L’un est intitulé « version de base », l’autre
-« nouvelle version ». Dans la page « version de base », le titre est « Prévisions sur 24 heures – Ottawa (Kanata-Orléans) », suivi d’une
-boîte d’alerte météorologique jaune et d’une partie d’un tableau énumérant la date, l’heure, la température et les conditions
-météorologiques. Le tableau dissimule la quatrième colonne. Une flèche pointe vers la piste de navigation et est assortie de
-l’annotation : « La longue piste de navigation diminuait la visibilité des détails météorologiques importants ».
+Deux téléphones intelligents affichent deux versions différentes d’une page Web. L’une est intitulée « Version de base », l’autre « Nouvelle version ».</p>
+
+<p>À la page « Version de base  », le titre est « Ottawa (Kanata-Orléans), ON », suivi d’une boîte d’alerte météo en jaune avec le texte « Veille d’orages violents ». Une flèche pointe vers la boîte d’alerte avec l’annotation « Version de base : Peu de gens se rendaient compte qu’ils pouvaient cliquer sur l’avertissement pour voir les détails de la tempête. »</p>
+<p>
+	À la page « Nouvelle version », la boîte d’alerte météo en jaune a été modifiée; il y a maintenant une petite icône d’avertissement, le texte est souligné pour montrer qu’il est possible de cliquer sur celui-ci, et il y a un chevron à droite. Cette image est animée, et l’écran du téléphone défile lentement vers le haut et vers le bas pour montrer que l’alerte apparaît aussi sous les prévisions, qui se trouvent plus bas sur la page. Une flèche pointe vers le texte d’alerte « Nouvelle version : Tout le monde a remarqué l’avertissement et a cliqué sur celui-ci en haut ou en bas des prévisions. »
 </p>
-<p>
-	Dans la page « nouvelle version », le titre est « Prévisions horaires – Ottawa (Kanata-Orléans) ». Une flèche pointe vers le lien
-	surligné dans la boîte d’alerte jaune et est assortie de l’annotation : « Les modifications apportées au style d’alerte ont aidé les
-	Canadiens à trouver les détails des alertes météorologiques ».</p>
-<p>
-	En dessous se trouve un tableau affichant la météo locale et les quatre colonnes sont visibles. Une flèche pointe vers le
-	graphique et est assortie de l’annotation : « Le graphique adaptatif a aidé les utilisateurs mobiles à voir les données
-	météorologiques ».
-</p>
+
+
+
 
 </details>
 
 </figure>
+<h3>City page design before and after mobile redesign for validation</h3>
+<div class="mwsmediaplayer section">
 
+
+    <figure class="wb-mltmd"><video poster="../images/weather-meteo/weather_phones_anim-FR.jpg" title="City page design before and after mobile redesign for validation">
+ <source src="../images/weather-meteo/weather_phones_anim-FR.mp4" type="video/mp4" />
+
+</video></figure>
+
+
+
+</div>
+
+<details>
+<summary>
+Description de vidéo
+</summary>
+<br>
+<p>
+Deux téléphones intelligents affichent deux versions différentes d’une page Web. L’une est intitulée « Version de base », l’autre « Nouvelle version ».</p>
+
+<p>La page « Version de base » est animée et défile vers le bas, en dessous des sections « Conditions actuelles », « Prévisions » et « Moyennes et extrêmes », entre autres. La page est très longue et les liens couramment utilisés se trouvent à la fin. Une flèche pointe vers la liste de liens avec l’annotation « Version de base : Une longue page à faire défiler. Les participants n’ont trouvé les liens importants qu’au bas de la page. ».</p>
+
+<p>
+La page « Nouvelle version » est également animée et défile jusqu’à la fin de la section « Conditions actuelles ». Cette partie de la page a été modifiée pour que le contenu soit présenté en deux colonnes, et les liens sont maintenant faciles à trouver. Une flèche pointe vers la liste de liens avec l’annotation « Nouvelle version : Le contenu a été simplifié. La page est courte. Tous les participants ont trouvé les liens importants à côté des prévisions. »
+</p>
+</details>
+
+</figure>
 
 <h2 id="measuring-success-rates-on-the-redesigned-prototype">Mesure des taux de réussite du prototype restructuré</h2>
 
