--- a/research-summaries/weather-research-summary.html
+++ b/research-summaries/weather-research-summary.html
@@ -183,7 +183,7 @@ Detailed description
 <div class="mwsmediaplayer section">
 
 
-    <figure class="wb-mltmd"><video poster="#" title="Alert design before and after mobile redesign for validation">
+    <figure class="wb-mltmd"><video poster="../images/weather-meteo/weather_phones_anim-alert.jpg" title="Alert design before and after mobile redesign for validation">
  <source src="../images/weather-meteo/weather_phones_anim-alert.mp4" type="video/mp4" />
 
 </video></figure>
@@ -215,7 +215,7 @@ In the "After" page, the weather alert box in yellow has been changed: there is 
 <div class="mwsmediaplayer section">
 
 
-    <figure class="wb-mltmd"><video poster="#" title="City page design before and after mobile redesign for validation">
+    <figure class="wb-mltmd"><video poster="../images/weather-meteo/weather_phones_anim.jpg" title="City page design before and after mobile redesign for validation">
  <source src="../images/weather-meteo/weather_phones_anim.mp4" type="video/mp4" />
 
 </video></figure>
