final text translations

--- a/research-summaries/meteo-resume-researche.html
+++ b/research-summaries/meteo-resume-researche.html
@@ -185,7 +185,7 @@ Description détaillée
 <p>Tout au long du processus de conception, nous avons mis à l’essai le contenu auprès des utilisateurs au moyen de petites séances « guérilla » informelles. Ces essais ont révélé des problèmes de conception que nous avons pu régler avant la mise à l’essai modérée de la convivialité à grande échelle.</p>
 
 
-<h3>Alert design before and after mobile redesign for validation</h3>
+<h3>Conception d’alertes avant et après la nouvelle conception mobile aux fins de validation</h3>
 <div class="mwsmediaplayer section">
 
 
@@ -201,7 +201,7 @@ Description détaillée
 
 <details>
 <summary>
-Description de vidéo
+Description vidéo
 </summary>
 <br>
 <p>
@@ -218,7 +218,7 @@ Deux téléphones intelligents affichent deux versions différentes d’une page
 </details>
 
 </figure>
-<h3>City page design before and after mobile redesign for validation</h3>
+<h3>Conception de la page de la ville avant et après la nouvelle conception mobile aux fins de validation</h3>
 <div class="mwsmediaplayer section">
 
 
@@ -233,7 +233,7 @@ Deux téléphones intelligents affichent deux versions différentes d’une page
 
 <details>
 <summary>
-Description de vidéo
+Description vidéo
 </summary>
 <br>
 <p>
